# cppglue

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py  entrypoint.sh  vcpkg.json
alpine/: Dockerfile  readme.md
cmake/: ccache.cmake  cmake_module_support.cmake  cmake_uninstall.cmake  common_settings.cmake  cppglue-config.cmake.in  create_package.cmake  create_tidy_target.cmake  get_cpm.cmake  installation_target.cmake  print_compiler_and_flags.cmake  use_mold_linker.cmake
include/: ast_actions.hpp  include_tracker.hpp  print_info.hpp  visitor.hpp
py-gen/: CMakeLists.txt  Dockerfile  binding_generator.cpp
py-gen/cmake/: py-gen-config.cmake.in
py-gen/docs/: example.toml  how_to_callbacks.md
py-gen/include/: py-gen.h
py-gen/src/: binding_generator.cpp  py-gen.cpp
py-gen/src/templates/: CMakeLists.txt.template  CPM.cmake.template  pyproject.toml.template  setup.py.template
py-gen/tests/: CMakeLists.txt
py-gen/tests/tmp/: another_ex.h  another_ex.hpp  another_ex2.h  example.toml  init.py  main2.py  my_module_bindings.cpp  pybinding2.cpp  pybinding2_bindings.cpp  struct_example.h  struct_example_impl.cpp  struct_example_impl.h
tests/: CMakeLists.txt
